objects/Account.object
<CustomObject>
    <fields>
        <fullName>Car_Make__c</fullName>
        <description>Custom field to stage merge conflict on page layout for Cars.com.</description>
        <label>Car Make</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dodge</fullName>
                </value>
                <value>
                    <fullName>Chevrolet</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Toyota</fullName>
                </value>
                <value>
                    <fullName>Jeep</fullName>
                </value>
                <value>
                    <fullName>Subaru</fullName>
                </value>
                <value>
                    <fullName>Ferrari</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_User_Group_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Custom field for Cars.com to show merge conflict on page layout.</description>
        <label>Salesforce User Group Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Use_Case_2_Picklist__c</fullName>
        <description>Custom picklist field created for use case 2 from Jake/Shelley training.</description>
        <label>Use Case 2 Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Use_Case_2_Global_Values</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>